--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     function hellodunia() {
         const lanjut = confirm("ingin membuka tabel sederhana?")
         if (lanjut) {
-            return document.location.href = "D:pemograman web/index.html"
+            return document.location.href = " https://nanawrah.github.io/nanawrah.github.io-p03/"
         }
         alert("membatalkan membuka tabel")
     }
@@ -63,7 +63,7 @@
     function istilahkata() {
       const yalanjut = confirm("Ingin membuka tabel CSS?")
       if (yalanjut) {
-        return document.location.href = "css.html"
+        return document.location.href = " https://nanawrah.github.io/nanawrah.github.io-P03css/"
     }
         alert("membatalkan membuka tabel")
     }
@@ -73,7 +73,7 @@
     function hoohtenan() {
         const lanjut = confirm("Ingin membuka tabel Jquery?")
         if (lanjut) {
-            return document.location.href =""
+            return document.location.href =" https://nanawrah.github.io/nanawrah.github.io-P03jquery/"
         }
         alert("membatalkan membuka tabel")
     }
