--- a/p04css-basic/index.html
+++ b/p04css-basic/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulir Level #2 CSS</title>
-	<link rel="stylesheet" href="style_nawrah.css.html">
+	<link rel="stylesheet" href="p04css-basic/style_nawrah.css.html">
 </head>
 <body> 
     <body>
