--- a/p04css-basic/index.html
+++ b/p04css-basic/index.html
@@ -14,36 +14,36 @@
 	<h2>Formulir Pendaftaran Mahasiswa Baru</h2>
 	<h3>Petunjuk Pengisian:</h3>
 	<ol>
-		<li>Isilah data dengan cermat, teliti dan benar</li>
-		<li>Isilah dengan huruf balok</li>
-		<li>Salah penulisan pada pengisian formulir ini akan berakibat kesalahan pada penulisan data Saudara pada ijazah</li>
+		<li>Isilah formulir dengan teliti dan benar</li>
+		<li>Isilah identitas diri dengan sebenar-benarnya</li>
+		<li>Cek kembali formulir sebelum dikirim</li>
 	</ol>
     <form>
-		<fieldset class="kotak1">
+		<fieldset class="bagian1">
 			<table>
 				<tr>
 					<th align="left">1.</th>
-					<th align="left">Nomor Pendaftaran</th>
+					<th align="left">No Pendaftaran</th>
 					<td>:</td>
-					<td><input class="daftar" type="text" name="daftar" maxlength="10" placeholder="Masukkan nomor..."></td>
+					<td><input class="klik" type="text" name="daftar" maxlength="10" placeholder="Masukkan nomor..."></td>
 				</tr>
 				<tr>
 					<th align="left">2.</th>
 					<th align="left">Nama</th>
 					<td>:</td>
-					<td><input class="daftar" type="text" name="nama" maxlength="50" placeholder="Nama lengkap..."></td>
+					<td><input class="klik" type="text" name="nama" maxlength="50" placeholder="Nama lengkap..."></td>
 				</tr>
 				<tr>
 					<th align="left">3.</th>
 					<th align="left">Tanggal Ujian</th>
 					<td>:</td>
-					<td><input class="daftar" type="date" name="tgl"></td>
+					<td><input class="klik" type="date" name="tgl"></td>
 				</tr>
 				<tr>
 					<th align="left">4.</th>
 					<th align="left">Jenis Kelamin</th>
 					<td>:</td>
-					<td class="daftar" >
+					<td class="klik" >
 						<input type="radio" name="gender" value="Laki-laki"> Laki-laki
 						<input type="radio" name="gender" value="Perempuan"> Perempuan
 					</td>
@@ -53,7 +53,7 @@
 					<th align="left">Jenjang/Jurusan</th>
 					<td>:</td>
 					<td>
-						<table border="2" cellpadding="8" class="daftar" >
+						<table border="2" cellpadding="8" class="klik" >
 							<thead>
 								<tr>
 									<th rowspan="2">JENJANG</th>
@@ -71,11 +71,11 @@
 										(Diploma Tiga)
 									</th>
 									<td>
-										<input type="radio" name="jenjang" value="Reguler Akuntansi"> Akuntansi <br>
+										<input type="radio" name="jenjang" value="Reguler Akuntansi">Komputerisasi Akuntansi <br>
 										<input type="radio" name="jenjang" value="Reguler Manajemen Perusahaan"> Manajemen Perusahaan
 									</td>
 									<td>
-										<input type="radio" name="jenjang" value="Karywan Akuntansi"> Akuntansi <br>
+										<input type="radio" name="jenjang" value="Karywan Akuntansi">Komputerisasi Akuntansi <br>
 										<input type="radio" name="jenjang" value="Karyawan Manajemen Perusahaan"> Manajemen Perusahaan
 									</td>
 								</tr>
@@ -85,12 +85,12 @@
 										(Strata Satu)
 									</th>
 									<td>
-										<input type="radio" name="jenjang" value="Reguler Akuntansi"> Akuntansi <br>
-										<input type="radio" name="jenjang" value="Reguler"> Manajemen
+										<input type="radio" name="jenjang" value="Reguler Akuntansi">Komputerisasi Akuntansi <br>
+										<input type="radio" name="jenjang" value="Reguler"> Manajemen Informatika
 									</td>
 									<td>
-										<input type="radio" name="jenjang" value="Karywan Akuntansi"> Akuntansi <br>
-										<input type="radio" name="jenjang" value="Karyawan Manajemen"> Manajemen
+										<input type="radio" name="jenjang" value="Karywan Akuntansi">Komputerisasi Akuntansi <br>
+										<input type="radio" name="jenjang" value="Karyawan Manajemen"> Manajemen Informatika
 									</td>
 								</tr>
 							</tbody>
@@ -101,7 +101,7 @@
 					<th></th>
 					<th align="left">Waktu Kuliah</th>
 					<td>:</td>
-					<td class="daftar" >
+					<td class="klik" >
 						<input type="radio" name="waktu" value="pagi">Pagi
 						<input type="radio" name="waktu" value="sore">Sore
                         <input type="radio" name="waktu" value="malam">Malam
@@ -111,7 +111,7 @@
 					<th></th>
 					<th align="left">Sistem Pembayaran</th>
 					<td>:</td>
-					<td class="daftar" >
+					<td class="klik" >
 						<input type="radio" name="bayar" value="Angsuran"> Angsuran
 						<input type="radio" name="bayar" value="Tunai"> Tunai
 					</td>
@@ -120,13 +120,13 @@
 		</fieldset>
 		<br>
         <b>DATA PRIBADI</b>
-		<fieldset class="kotak2">
+		<fieldset class="bagian2">
 			<table>
 				<tr>
 					<th align="left">6.</th>
 					<th align="left">Agama</th>
 					<td>:</td>
-					<td><select class="daftar" name="agama">
+					<td><select class="klik" name="agama">
                         <option value=""></option>
                         <option value="islam">Islam</option>
                         <option value="kristen">Kristen</option>
@@ -137,57 +137,57 @@
 				</tr>
 				<tr>
 					<th align="left">7.</th>
-					<th align="left">Tempat</th>
+					<th align="left">Tempat lahir</th>
 					<td>:</td>
-					<td><input class="daftar" type="text" name="tempat" maxlength="20" placeholder="Tempat lahir..."></td>
+					<td><input class="klik" type="text" name="tempat" maxlength="20" placeholder="Tempat lahir..."></td>
 				</tr>
 				<tr>
 					<th></th>
 					<th align="left">Tanggal Lahir</th>
 					<td>:</td>
-					<td><input class="daftar" type="date" name="ttl"></td>
+					<td><input class="klik" type="date" name="ttl"></td>
 				</tr>
 				<tr>
 					<th align="left">8.</th>
 					<th align="left">Alamat dan No. Rumah</th>
 					<td>:</td>
-					<td><textarea class="daftar" name="alamat" placeholder="Alamat Lengkap..."></textarea></td>
+					<td><textarea class="klik" name="alamat" placeholder="Alamat Lengkap..."></textarea></td>
 				</tr>
 				<tr>
 					<th></th>
 					<th align="left">RT/RW</th>
 					<td>:</td>
-					<td><input class="daftar"type="text" name="rwrt" maxlength="5"></td>
+					<td><input class="klik" type="text" name="rwrt" maxlength="5"></td>
 				</tr>
 				<tr>
 					<th></th>
 					<th align="left">Kota</th>
 					<td>:</td>
-					<td><input class="daftar" type="text" name="kota" maxlength="10" placeholder="Kota anda..."></td>
+					<td><input class="klik" type="text" name="kota" maxlength="10" placeholder="Kota anda..."></td>
 				</tr>
 				<tr>
 					<th></th>
 					<th align="left">Kode Pos</th>
 					<td>:</td>
-					<td><input class="daftar" type="text" name="kodepos" maxlength="5" placeholder="masukkan kode pos.."></td>
+					<td><input class="klik" type="text" name="kodepos" maxlength="5" placeholder="masukkan kode pos.."></td>
 				</tr>
 				<tr>
 					<th align="left">9.</th>
 					<th align="left">Nomor Telepon Rumah / HP</th>
 					<td>:</td>
-					<td><input class="daftar" type="text" name="no_hp" maxlength="15" placeholder="Nomor aktif.."></td>
+					<td><input class="klik" type="text" name="no_hp" maxlength="15" placeholder="Nomor aktif.."></td>
 				</tr>
 				<tr>
 					<th align="left">10. </th>
 					<th align="left">Kewarganegaraan</th>
 					<td>:</td>
-					<td class="daftar">
+					<td class="klik">
 						<input type="radio" name="kewarganegaraan" value="WNI"> WNI
 						<input type="radio" name="kewarganegaraan" value="WNA"> WNA
                         <th></th>
 					<th align="left">Gol. Darah</th>
 					<td>:</td>
-					<td class="daftar">
+					<td class="klik">
 						<select name="gol-darah">
 							<option value=""></option>
 							<option value="A">A</option>
@@ -202,13 +202,14 @@
 					<th align="left">11.</th>
 					<th align="left">Nama Orang tua / Wali</th>
 					<td>:</td>
-					<td><input class="daftar" type="text" name="nama_ortu" maxlength="50"></td>
+					<td><input class="klik
+						" type="text" name="nama_ortu" maxlength="50"></td>
 				</tr>
 				<tr>
 					<th></th>
 					<th align="left">Pekerjaan</th>
 					<td>:</td>
-					<td class="daftar">
+					<td class="klik">
 						<input type="radio" name="pekerjaan" value="PNS/TNI/POLRI">PNS/TNI/POLRI <br>
 						<input type="radio" name="pekerjaan" value="Swasta">Swasta <br>
                         <input type="radio" name="pekerjaan" value="Wiraswasta">Wiraswasta <br>
@@ -219,19 +220,19 @@
 		</fieldset>
 		<br>
         <b>PENDIDIKAN TERAKHIR</b>
-		<fieldset class="kotak3">
+		<fieldset class="bagian3">
 			<table>
 				<tr>
 					<th align="left">12.</th>
-					<th align="left">Asal SMA/SMK/Perguruan Tinggi</th>
+					<th align="left">Asal Sekolah/Perguruan Tinggi</th>
 					<td>:</td>
-					<td><input class="daftar" type="text" name="asal_pendidikan" maxlength="20"></td>
+					<td><input class="klik" type="text" name="asal_pendidikan" maxlength="20"></td>
 				</tr>
 				<tr>
 					<th></th>
 					<th align="left">Status Sekolah/Perguruan Tinggi</th>
 					<td>:</td>
-					<td class="daftar">
+					<td class="klik">
 						<input type="radio" name="status_sekolah" value="negeri">Negeri
 						<input type="radio" name="status_sekolah" value="swasta">Swasta
                         <input type="radio" name="status_sekolah" value="luar negeri">Luar Negeri 
@@ -241,25 +242,25 @@
 					<th></th>
 					<th align="left">Jurusan</th>
 					<td>:</td>
-					<td><input class="daftar" type="text" name="jurusan" maxlength="20"></td>
+					<td><input class="klik" type="text" name="jurusan" maxlength="20"></td>
 				</tr>
 				<tr>
 					<th></th>
 					<th align="left">Nomor Ijazah SMA/SMK/Diploma III/S1</th>
 					<td>:</td>
-					<td><input class="daftar" type="text" name="nomor_ijazah" maxlength="15"></td>
+					<td><input class="klik" type="text" name="nomor_ijazah" maxlength="15"></td>
 				</tr>
 				<tr>
 					<th></th>
 					<th align="left">Tanggal Lulus</th>
 					<td>:</td>
-					<td><input class="daftar" type="date" name="lulus"></td>
+					<td><input class="klik" type="date" name="lulus"></td>
 				</tr>
                 <tr>
 					<th></th>
-					<th align="left">Nilai NEM STTB/IPK</th>
+					<th align="left">Nilai NIM STTB/IPK</th>
 					<td>:</td>
-					<td><input class="daftar" type="text" name="nilai_nem" placeholder="Masukkan nilai..."></td>
+					<td><input class="klik" type="text" name="nilai_nem" placeholder="Masukkan nilai..."></td>
 				</tr>
 			</table>
 		</fieldset>
@@ -272,10 +273,10 @@
 				<td height="100px"></td>
 			</tr>
 			<tr>
-				<td><input class="daftar" type="text" name="" placeholder="Nama Lengkap"></td>
+				<td><input class="klik" type="text" name="" placeholder="Nama Lengkap"></td>
 			</tr>
 		</table> <br>
-	    <button type="submit" class="tombol">Kirim</button>
+	    <button type="submit" class="tombol_kirim">Kirim</button>
 	</form>
     </body>
     </html>
