--- a/p04css-responsive/index.html
+++ b/p04css-responsive/index.html
@@ -10,7 +10,7 @@
 </head>
 <body> 
     <body>
-        <img src="kop surat.png" width="100%">
+        <img class="boom" src="kop surat.png" width="100%">
 	<h2>Formulir Pendaftaran Mahasiswa Baru</h2>
 	<h3>Petunjuk Pengisian:</h3>
 	<ol>
