--- a/p04css-responsive/index.html
+++ b/p04css-responsive/index.html
@@ -5,12 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulir Level #3 Responsive CSS</title>
+    <title>Formulir Level #3 CSS Responsive</title>
 	<link rel="stylesheet" href="style_nawrah.css">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide|Sofia|Trirong">
 </head>
 <body> 
-    <body>
-        <img class="boom" src="kop surat.png" width="100%">
+    <body class="jeder">
+		<div class="header">
+        <img src="kop surat.png" alt="kop-surat-ikmi">
+		</div>
 	<h2>Formulir Pendaftaran Mahasiswa Baru</h2>
 	<h3>Petunjuk Pengisian:</h3>
 	<ol>
@@ -18,6 +21,7 @@
 		<li>Isilah identitas diri dengan sebenar-benarnya</li>
 		<li>Cek kembali formulir sebelum dikirim</li>
 	</ol>
+	<div class="nana">
     <form>
 		<fieldset class="bagian1">
 			<table>
@@ -264,6 +268,7 @@
 				</tr>
 			</table>
 		</fieldset>
+	</div>
 		<br>
 		<table align="right">
 			<tr>
